--- a/tools/spectral/ipa/rulesets/IPA-106.yaml
+++ b/tools/spectral/ipa/rulesets/IPA-106.yaml
@@ -5,6 +5,7 @@ functions:
   - createMethodRequestBodyIsRequestSuffixedObject
   - createMethodShouldNotHaveQueryParameters
   - createMethodRequestBodyIsGetResponse
+  - createMethodResponseCodeIs201Created
 
 rules:
   xgen-IPA-106-create-method-request-body-is-request-suffixed-object:
