IPA 106: Create : A Request object must include only input fields (#528)

--- a/tools/spectral/ipa/rulesets/IPA-106.yaml
+++ b/tools/spectral/ipa/rulesets/IPA-106.yaml
@@ -5,6 +5,7 @@ functions:
   - createMethodRequestBodyIsRequestSuffixedObject
   - createMethodShouldNotHaveQueryParameters
   - createMethodRequestBodyIsGetResponse
+  - createMethodRequestHasNoReadonlyFields
 
 rules:
   xgen-IPA-106-create-method-request-body-is-request-suffixed-object:
@@ -34,3 +35,11 @@ rules:
       function: 'createMethodRequestBodyIsGetResponse'
       functionOptions:
         ignoredValues: ['readOnly', 'writeOnly']
+  xgen-IPA-106-create-method-request-has-no-readonly-fields:
+    description: 'Create method Request object must not include fields with readOnly:true. http://go/ipa/106'
+    message: '{{error}} http://go/ipa/106'
+    severity: warn
+    given: '$.paths[*].post.requestBody.content'
+    then:
+      field: '@key'
+      function: 'createMethodRequestHasNoReadonlyFields'
