--- a/tools/spectral/ipa/rulesets/IPA-106.yaml
+++ b/tools/spectral/ipa/rulesets/IPA-106.yaml
@@ -6,6 +6,7 @@ functions:
   - createMethodShouldNotHaveQueryParameters
   - createMethodRequestBodyIsGetResponse
   - createMethodRequestHasNoReadonlyFields
+  - createMethodResponseCodeIs201Created
 
 rules:
   xgen-IPA-106-create-method-request-body-is-request-suffixed-object:
@@ -43,3 +44,10 @@ rules:
     then:
       field: '@key'
       function: 'createMethodRequestHasNoReadonlyFields'
+  xgen-IPA-106-create-method-response-code-is-201:
+    description: 'Create methods must return a 201 Created response code. http://go/ipa/106'
+    message: '{{error}} http://go/ipa/106'
+    severity: warn
+    given: '$.paths[*].post'
+    then:
+      function: 'createMethodResponseCodeIs201Created'
