address the comments

--- a/tools/spectral/ipa/rulesets/IPA-106.yaml
+++ b/tools/spectral/ipa/rulesets/IPA-106.yaml
@@ -10,7 +10,7 @@ functions:
 
 rules:
   xgen-IPA-106-create-method-request-body-is-request-suffixed-object:
-    description: |
+    description: >-
       The Create method request should be a Request suffixed object. http://go/ipa/106
       This rule applies only to POST requests targeting resource collection URIs.
     message: '{{error}} http://go/ipa/106'
@@ -20,7 +20,7 @@ rules:
       field: '@key'
       function: 'createMethodRequestBodyIsRequestSuffixedObject'
   xgen-IPA-106-create-method-should-not-have-query-parameters:
-    description: |
+    description: >-
       Create operations should not use query parameters. http://go/ipa/106
       This rule applies only to POST requests targeting resource collection URIs.
     message: '{{error}} http://go/ipa/106'
@@ -29,7 +29,7 @@ rules:
     then:
       function: 'createMethodShouldNotHaveQueryParameters'
   xgen-IPA-106-create-method-request-body-is-get-method-response:
-    description: |
+    description: >-
       Request body content of the Create method and response content of the Get method should refer to the same resource. http://go/ipa/106
       readOnly/writeOnly properties will be ignored.  
       This rule applies only to POST requests targeting resource collection URIs.
@@ -42,7 +42,7 @@ rules:
       functionOptions:
         ignoredValues: ['readOnly', 'writeOnly']
   xgen-IPA-106-create-method-request-has-no-readonly-fields:
-    description: |
+    description: >-
       Create method Request object must not include fields with readOnly:true. http://go/ipa/106
       This rule applies only to POST requests targeting resource collection URIs.
     message: '{{error}} http://go/ipa/106'
@@ -52,7 +52,7 @@ rules:
       field: '@key'
       function: 'createMethodRequestHasNoReadonlyFields'
   xgen-IPA-106-create-method-response-code-is-201:
-    description: |
+    description: >-
       Create methods must return a 201 Created response code. http://go/ipa/106
       This rule applies only to POST requests targeting resource collection URIs.
     message: '{{error}} http://go/ipa/106'
