chore: update foas release to run every 2 hours from Monday to Friday

--- a/.github/workflows/release-spec-runner.yml
+++ b/.github/workflows/release-spec-runner.yml
@@ -16,7 +16,7 @@ on:
         default: 'dev'
         required: false
   schedule:
-   - cron: '0 * * * 1-5' # Run every hour from Monday to Friday
+    - cron: '0 */2 * * 1-5' # Run every 2 hours from Monday to Friday
 permissions:
   contents: write
   pull-requests: write
