fix: use direct ref

--- a/tools/spectral/ipa/rulesets/IPA-102.yaml
+++ b/tools/spectral/ipa/rulesets/IPA-102.yaml
@@ -17,7 +17,7 @@ rules:
          - Paths with `x-xgen-IPA-exception` for this rule are excluded from validation
          - Double slashes (//) are not allowed in paths
 
-    message: '{{error}} http://go/ipa-spectral'
+    message: '{{error}} http://go/ipa-spectral#IPA-102'
     severity: warn
     given: $.paths
     then:
