--- a/tools/spectral/ipa/rulesets/IPA-105.yaml
+++ b/tools/spectral/ipa/rulesets/IPA-105.yaml
@@ -36,6 +36,7 @@ rules:
       - Validation applies to List methods for resource collections only<br/>
       - Validation applies to json response content only<br/>
       - Validation ignores responses without schema and non-paginated responses<br/>
+      - Validation ignores resources without a Get method<br/>
       - Paths with `x-xgen-IPA-exception` for this rule are excluded from validation<br/>
       http://go/ipa/105
     message: '{{error}} http://go/ipa/105'
