CLOUDP-305862: IPA 106 documentation standard

--- a/tools/spectral/ipa/rulesets/IPA-005.yaml
+++ b/tools/spectral/ipa/rulesets/IPA-005.yaml
@@ -2,13 +2,20 @@
 # http://go/ipa/5
 
 functions:
-  - exceptionExtensionFormat
+  - IPA105ExceptionExtensionFormat
 
 rules:
   xgen-IPA-005-exception-extension-format:
-    description: 'IPA exception extensions must follow the correct format. http://go/ipa/5'
-    message: '{{error}} http://go/ipa/5'
+    description: |
+      IPA exception extensions must follow the correct format. http://go/ipa/5
+      
+      ##### Implementation details
+      Rule checks for the following conditions:
+        - Exception rule names must start with 'xgen-IPA-' prefix
+        - Each exception must include a non-empty reason as a string
+        - This rule itself does not allow exceptions
+    message: '{{error}} http://go/ipa-spectral#IPA-102'
     severity: error
     given: '$..x-xgen-IPA-exception'
     then:
-      function: 'exceptionExtensionFormat'
+      function: 'IPA105ExceptionExtensionFormat'
