task: filter violations to add to the report

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "format-check": "npx prettier . --check",
         "lint-js": "npx eslint **/*.js",
         "gen-ipa-docs": "node tools/spectral/ipa/scripts/generateRulesetReadme.js",
-        "ipa-validation": "spectral lint ./openapi/.raw/v2.yaml --ruleset=./tools/spectral/ipa/ipa-spectral.yaml",
+        "ipa-validation": "spectral lint  ./openapi/.raw/v2.yaml --ruleset=./tools/spectral/ipa/ipa-spectral.yaml",
+        "ipa-filter": "node tools/spectral/ipa/scripts/filter-ipa-violations.js",
         "spectral-validation": "spectral lint ./openapi/.raw/v2.yaml --ruleset=./tools/spectral/.spectral.yaml",
         "test": "jest",
         "precommit": "husky install"
