CLOUDP-271995: Adds rule for update method must not have query param

--- a/tools/spectral/ipa/rulesets/IPA-106.yaml
+++ b/tools/spectral/ipa/rulesets/IPA-106.yaml
@@ -28,6 +28,7 @@ rules:
     given: '$.paths[*].post'
     then:
       function: 'createMethodShouldNotHaveQueryParameters'
+      ignoredValues: [ 'pretty', 'envelope' ]
   xgen-IPA-106-create-method-request-body-is-get-method-response:
     description: >-
       Request body content of the Create method and response content of the Get method should refer to the same resource. http://go/ipa/106
