--- a/tools/spectral/ipa/ipa-spectral.yaml
+++ b/tools/spectral/ipa/ipa-spectral.yaml
@@ -4,6 +4,7 @@ extends:
   - ./rulesets/IPA-104.yaml
   - ./rulesets/IPA-105.yaml
   - ./rulesets/IPA-106.yaml
+  - ./rulesets/IPA-107.yaml
   - ./rulesets/IPA-108.yaml
   - ./rulesets/IPA-109.yaml
   - ./rulesets/IPA-113.yaml
