--- a/tools/spectral/ipa/rulesets/IPA-105.yaml
+++ b/tools/spectral/ipa/rulesets/IPA-105.yaml
@@ -32,13 +32,17 @@ rules:
       function: 'eachResourceHasListMethod'
   xgen-IPA-105-list-method-response-is-get-method-response:
     description: >-
-      The response body of the List method should consist of the same resource object returned by the Get method. Validation checks that the List method results items reference the same schema as the Get method response.<br/>
-      - Validation applies to List methods for resource collections only<br/>
-      - Validation applies to json response content only<br/>
-      - Validation ignores responses without schema and non-paginated responses<br/>
-      - Validation ignores resources without a Get method<br/>
-      - Paths with `x-xgen-IPA-exception` for this rule are excluded from validation<br/>
-      http://go/ipa/105
+      The response body of the List method should consist of the same resource object returned by the Get method. http://go/ipa/105
+      
+      ##### Implementation details
+      
+      Validation checks that the List method response contains items property with reference to the same schema as the Get method response.
+      
+      - Validation applies to List methods for resource collections only
+      - Validation applies to json response content only
+      - Validation ignores responses without schema and non-paginated responses
+      - Validation ignores resources without a Get method
+      - Paths with `x-xgen-IPA-exception` for this rule are excluded from validation
     message: '{{error}} http://go/ipa/105'
     severity: warn
     given: '$.paths[*].get.responses[*].content'
