--- a/tools/spectral/ipa/rulesets/IPA-105.yaml
+++ b/tools/spectral/ipa/rulesets/IPA-105.yaml
@@ -43,7 +43,7 @@ rules:
         - Validation ignores responses without schema and non-paginated responses
         - Validation ignores resources without a Get method
         - Paths with `x-xgen-IPA-exception` for this rule are excluded from validation
-    message: '{{error}} http://go/ipa/105'
+    message: '{{error}} http://go/ipa-spectral#IPA-105'
     severity: warn
     given: '$.paths[*].get.responses[*].content'
     then:
