CLOUDP-304938: Clarify pagination

--- a/tools/spectral/ipa/rulesets/IPA-105.yaml
+++ b/tools/spectral/ipa/rulesets/IPA-105.yaml
@@ -41,6 +41,7 @@ rules:
         - Validation applies to List methods for resource collections only
         - Validation applies to json response content only
         - Validation ignores responses without schema and non-paginated responses
+          - A response is considered paginated if it contains an array property named `results`
         - Validation ignores resources without a Get method
         - Paths with `x-xgen-IPA-exception` for this rule are excluded from validation
     message: '{{error}} http://go/ipa-spectral#IPA-105'
