ember-inflector test

--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
         "transform": {
             "^.+\\.[t|j]sx?$": "babel-jest"
         },
+        "transformIgnorePatterns": [
+            "/node_modules/(?!ember-inflector)"
+        ],
         "testPathIgnorePatterns": [
             "__helpers__",
             "metrics/data"
