CLOUDP-271995: Fixes and tests

--- a/tools/spectral/ipa/rulesets/IPA-107.yaml
+++ b/tools/spectral/ipa/rulesets/IPA-107.yaml
@@ -8,20 +8,34 @@ rules:
   xgen-IPA-107-put-must-not-have-query-params:
     description: >-
       Update operations must not accept query parameters. http://go/ipa/107
-    message: '{{error}} http://go/ipa/107'
+
+      ##### Implementation details
+
+      Validation checks the PUT method for single resource paths and singleton resources.
+
+        - Query parameters `envelope` and `pretty` are exempt from this rule
+        - Operation objects with `x-xgen-IPA-exception` for this rule are excluded from validation
+    message: '{{error}} http://go/ipa-spectral#IPA-107'
     severity: warn
     given: '$.paths[*].put'
     then:
       function: 'updateMethodMustNotHaveQueryParams'
       functionOptions:
-        ignoredValues: [ 'pretty', 'envelope' ]
+        ignoredValues: ['pretty', 'envelope']
   xgen-IPA-107-patch-must-not-have-query-params:
     description: >-
       Update operations must not accept query parameters. http://go/ipa/107
-    message: '{{error}} http://go/ipa/107'
+
+      ##### Implementation details
+
+      Validation checks the PATCH method for single resource paths and singleton resources.
+
+        - Query parameters `envelope` and `pretty` are exempt from this rule
+        - Operation objects with `x-xgen-IPA-exception` for this rule are excluded from validation
+    message: '{{error}} http://go/ipa-spectral#IPA-107'
     severity: warn
     given: '$.paths[*].patch'
     then:
       function: 'updateMethodMustNotHaveQueryParams'
       functionOptions:
-        ignoredValues: [ 'pretty', 'envelope' ]
+        ignoredValues: ['pretty', 'envelope']
