CLOUDP-304938: Adds rule xgen-IPA-105-list-method-response-is-get-method-response (#535)

--- a/tools/spectral/ipa/rulesets/IPA-105.yaml
+++ b/tools/spectral/ipa/rulesets/IPA-105.yaml
@@ -5,6 +5,7 @@ functions:
   - listResponseCodeShouldBe200OK
   - listMethodHasNoRequestBody
   - eachResourceHasListMethod
+  - listMethodResponseIsGetMethodResponse
 
 rules:
   xgen-IPA-105-list-method-response-code-is-200:
@@ -29,3 +30,23 @@ rules:
     then:
       field: '@key'
       function: 'eachResourceHasListMethod'
+  xgen-IPA-105-list-method-response-is-get-method-response:
+    description: >-
+      The response body of the List method should consist of the same resource object returned by the Get method. http://go/ipa/105
+
+      ##### Implementation details
+
+      Validation checks that the List method response contains items property with reference to the same schema as the Get method response.
+
+        - Validation applies to List methods for resource collections only
+        - Validation applies to json response content only
+        - Validation ignores responses without schema and non-paginated responses
+          - A response is considered paginated if it contains an array property named `results`
+        - Validation ignores resources without a Get method
+        - Paths with `x-xgen-IPA-exception` for this rule are excluded from validation
+    message: '{{error}} http://go/ipa-spectral#IPA-105'
+    severity: warn
+    given: '$.paths[*].get.responses[*].content'
+    then:
+      field: '@key'
+      function: 'listMethodResponseIsGetMethodResponse'
