CLOUDP-304053: IPA-106:Create - The resource must be the request body (exclude readOnly:true and writeOnly:true)

--- a/tools/spectral/ipa/rulesets/IPA-106.yaml
+++ b/tools/spectral/ipa/rulesets/IPA-106.yaml
@@ -31,7 +31,8 @@ rules:
   xgen-IPA-106-create-method-request-body-is-get-method-response:
     description: >-
       Request body content of the Create method and response content of the Get method should refer to the same resource. http://go/ipa/106
-      readOnly/writeOnly properties will be ignored.  
+      readOnly:true properties of Get method response will be ignored. 
+      writeOnly:true properties of Create method request will be ignored.
       This rule applies only to POST requests targeting resource collection URIs.
     message: '{{error}} http://go/ipa/106'
     severity: warn
@@ -39,8 +40,6 @@ rules:
     then:
       field: '@key'
       function: 'createMethodRequestBodyIsGetResponse'
-      functionOptions:
-        ignoredValues: ['readOnly', 'writeOnly']
   xgen-IPA-106-create-method-request-has-no-readonly-fields:
     description: >-
       Create method Request object must not include fields with readOnly:true. http://go/ipa/106
