--- a/tools/spectral/ipa/rulesets/IPA-107.yaml
+++ b/tools/spectral/ipa/rulesets/IPA-107.yaml
@@ -7,7 +7,7 @@ functions:
 rules:
   xgen-IPA-107-put-must-not-have-query-params:
     description: >-
-      Update operations must not accept query parameters. http://go/ipa/107
+      Update operations must not accept query parameters.
 
       ##### Implementation details
 
@@ -24,7 +24,7 @@ rules:
         ignoredValues: ['pretty', 'envelope']
   xgen-IPA-107-patch-must-not-have-query-params:
     description: >-
-      Update operations must not accept query parameters. http://go/ipa/107
+      Update operations must not accept query parameters. 
 
       ##### Implementation details
 
