--- a/tools/spectral/ipa/rulesets/IPA-005.yaml
+++ b/tools/spectral/ipa/rulesets/IPA-005.yaml
@@ -7,7 +7,7 @@ functions:
 rules:
   xgen-IPA-005-exception-extension-format:
     description: |
-      IPA exception extensions must follow the correct format. http://go/ipa/5
+      IPA exception extensions must follow the correct format.
 
       ##### Implementation details
       Rule checks for the following conditions:
