--- a/tools/spectral/ipa/rulesets/IPA-105.yaml
+++ b/tools/spectral/ipa/rulesets/IPA-105.yaml
@@ -32,7 +32,7 @@ rules:
       function: 'eachResourceHasListMethod'
   xgen-IPA-105-list-method-response-is-get-method-response:
     description: >-
-      The response body of the List method should consist of the same resource object returned by the Get method. http://go/ipa/105
+      The response body of the List method should consist of the same resource object returned by the Get method.
 
       ##### Implementation details
 
